scripts/dpkg-scanpackages.pl: fix typo in vercmp version cache scripts/dpkg-shlibdeps.pl: remove statement that was basically a strange no-op scripts/controllib.pl: give  syntax error for unexpected PGP signature debian/changelog: updated

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+Sat Apr 21 02:39:37 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
+
+  * scripts/dpkg-scanpackages.pl: fix typo in vercmp version cache
+  * scripts/dpkg-shlibdeps.pl: remove statement that was basically
+    a strange no-op
+  * scripts/controllib.pl: give  syntax error for unexpected PGP signature
+  * debian/changelog: updated
+
 Fri Apr 20 19:46:38 CDT 2001 Adam Heath <doogie@debian.org>
 
   * po/pl.po: Remove spurious '%s' in Polish translation
@@ -169,7 +177,7 @@ Fri Mar  2 17:29:02 CET 2001 Wichert Akkerman <wakkerma@debian.org>
     dselect/methparse.cc: rename struct option to dselect_option to prevent
     conflict with getopt.h
   * main/help.c: rework do_script a bit to compile without errors
-  * scripts/dpkg-gencontrol.1: add -n option to specify filename
+  * scripts/dpkg-gencontrol.pl: add -n option to specify filename
   * scripts/dpkg-source.1:
     + document -n option for dpkg-gencontrol
     + fix confusing wording for dpkg-buildpackage -uc option
