Remove yet another Linux reference

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sat Apr 21 04:02:58 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
+
+  * main/dpkg.8: remove Linux reference
+
 Sat Apr 21 02:39:37 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
 
   * scripts/dpkg-scanpackages.pl: fix typo in vercmp version cache
