Close another bug

--- a/debian/changelog
+++ b/debian/changelog
@@ -47,7 +47,7 @@ dpkg (1.9.0) unstable; urgency=low
   * Fix typo in start-stop-daemon manpage. Closes: Bug#88225
   * Add dpkg-checkbuilddeps to check if build dependencies are satisfied
     and modify dpkg-buildpackage to call it if wanted.
-    Closes: Bug#86453,#83812,#60717,#74372,#67896,#60717
+    Closes: Bug#86453,#83812,#60717,#74372,#67896,#60717,#13961
   * dpkg-parsechangelog can read a changelog from stdin now. Closes: Bug#80142
   * Fix confusing wording for dpkg-buildpackage -uc option in manpage.
     Closes: Bug#83468
