--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Fri Apr 20 16:02:51 CDT 2001 Adam Heath <doogie@debian.org>
+
+  * debian/changelog: Document stuff that was done in December.
+
 Sat Apr 21 04:02:58 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
 
   * main/dpkg.8: remove Linux reference
