Updated Swedish translation.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Sat Apr 21 17:10:32 CEST 2001 peter karlsson <peterk@debian.org>
+
+  * po/sv.po, doc/sv/dpkg.8, doc/sv/start-stop-daemon.8:
+    Updated Swedish translation.
+
 Fri Apr 20 16:02:51 CDT 2001 Adam Heath <doogie@debian.org>
 
   * debian/changelog: Document stuff that was done in December.
