include stdlib.h to get exit declaration

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Sun Apr 22 00:09:58 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
+
+  * optlib/long-options.c, lib/showcright.c: include stdlib.h to get
+    declaration of exit
+
 Sat Apr 21 17:10:32 CEST 2001 peter karlsson <peterk@debian.org>
 
   * po/sv.po, doc/sv/dpkg.8, doc/sv/start-stop-daemon.8:
