* main/help.c, main/processarc.c, main/filesdb.c,  main/configure.c,     main/archives.c, lib/parse.c: Fix int/pointer casting warnings.   * include/dpkg.h.in, lib/mlib.c: Rewrote buffer_copy_setup, to avoid     int/pointer casting warnings.  These means there are several     variations of buffer_copy_setup.  Also, converted the desc parameter     to const.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+Sat Apr 21 17:16:28 CDT 2001 Adam Heath <doogie@debian.org>
+
+  * main/help.c, main/processarc.c, main/filesdb.c,  main/configure.c,
+    main/archives.c, lib/parse.c: Fix int/pointer casting warnings.
+  * include/dpkg.h.in, lib/mlib.c: Rewrote buffer_copy_setup, to avoid
+    int/pointer casting warnings.  These means there are several
+    variations of buffer_copy_setup.  Also, converted the desc parameter
+    to const.
+
 Sun Apr 22 00:09:58 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
 
   * optlib/long-options.c, lib/showcright.c: include stdlib.h to get
