remove no longer used warning flags

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sun Apr 22 00:33:26 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
+
+  * Makefile.conf.in: remove no longer used warning flags
+
 Sat Apr 21 17:16:28 CDT 2001 Adam Heath <doogie@debian.org>
 
   * main/help.c, main/processarc.c, main/filesdb.c,  main/configure.c,
