Fix weird pointer usage

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sun Apr 22 00:48:18 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
+
+  * main/main.c: fixed some bizar pointer usage
+
 Sun Apr 22 00:33:26 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
 
   * Makefile.conf.in: remove no longer used warning flags
