fix non-full initalizer.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 Sat Apr 21 18:00:31 CDT 2001 Adam Heath <doogie@debian.org>
 
   * main/main.c: reworked \\ parsing in commandfd.
+  * lib/dbmodify.c: fix non-full initalizer.
 
 Sun Apr 22 00:48:18 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
 
