Added macro NONRETURNING to several functions.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Sun Apr 22 02:46:06 CDT 2001 Adam Heath <doogie@debian.org>
+
+  * dpkg-deb/build.c, dpkg-deb/extract.c, dpkg-deb/main.c, lib/mlib.c(*),
+    lib/showcopyright.c, main/enquiry.c, main/main.c, split/main.c,
+    split/split.c, utils/md5sum.c, utils/start-stop-daemon.c: Added
+    macro NONRETURNING to several functions.
+
 Sun Apr 22 02:02:34 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
 
   * main/filesdb: change initialization of putat in
