do not read a .list or statoverride file if they are empty

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Sun Apr 22 16:42:22 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
+
+  * main/filesdb.c: don't read a statoverride or .list file if they
+    are 0 bytes
+
 Sun Apr 22 02:46:06 CDT 2001 Adam Heath <doogie@debian.org>
 
   * dpkg-deb/build.c, dpkg-deb/extract.c, dpkg-deb/main.c, lib/mlib.c(*),
