main/filesdb.c: fix putat logic we broke earlier today main/help.c: ensure_package_clientdata() only needs to allocate memory   for a perpackagestate struct, not a pkginfoperfile.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,16 @@
+Sun Apr 22 17:13:17 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
+
+  * main/filesdb.c: fix putat logic we broke earlier today
+
 Sun Apr 22 16:42:22 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
 
   * main/filesdb.c: don't read a statoverride or .list file if they
     are 0 bytes
+
+Sun Apr 22 15:15:56 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
+
+  * main/help.c: ensure_package_clientdata() only needs to allocate memory
+    for a perpackagestate struct, not a pkginfoperfile.
 
 Sun Apr 22 02:46:06 CDT 2001 Adam Heath <doogie@debian.org>
 
