Fix another segfault when parsing single-paragraph files(ie, tmp.ci/control).

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Sun Apr 22 18:32:02 CDT 2001 Adam Heath <doogie@debian.org>
+
+  * lib/parse.c: Fix another segfault when parsing single-paragraph
+    files(ie, tmp.ci/control).
+
 Sun Apr 22 17:13:17 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
 
   * main/filesdb.c: fix putat logic we broke earlier today
