s/PARSE_MMAP/HAVE_MMAP/, so that we now use mmap to read status and available(and like files).

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Sun Apr 22 19:02:12 CDT 2001 Adam Heath <doogie@debian.org>
+
+  * lib/parse.c: s/PARSE_MMAP/HAVE_MMAP/, so that we now use mmap
+    to read status and available(and like files).
+
 Sun Apr 22 18:32:02 CDT 2001 Adam Heath <doogie@debian.org>
 
   * lib/parse.c: Fix another segfault when parsing single-paragraph
