--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sun Apr 22 23:59:00 CDT 2001 Adam Heath <doogie@debian.org>
+
+  * archtable: Added alphaev67-linux-gnu.
+
 Sun Apr 22 19:02:12 CDT 2001 Adam Heath <doogie@debian.org>
 
   * lib/parse.c: s/PARSE_MMAP/HAVE_MMAP/, so that we now use mmap
