--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Mon Apr 23 02:17:26 CDT 2001 Adam Heath <doogie@debian.org>
+
+  * dpkg-deb/info.c, main/processarc.c: Add comments telling why we
+    use tempnam() and tmpnam().
+
 Sun Apr 22 23:59:00 CDT 2001 Adam Heath <doogie@debian.org>
 
   * archtable: Added alphaev67-linux-gnu.
