Fixed up several warning types: const, casting, incorrect sizes, signed/unsigned comparisons.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+Mon Apr 23 03:21:10 CDT 2001 Adam Heath <doogie@debian.org>
+
+  * dpkg-deb/{build,extract,main}.c, split/{info,join,main,queue}.c,
+    split/dpkg-split.h, lib/{dump,ehandle,fields,mlib,parse{,help},varbuf,
+    vercmp}.c, lib/parsedump.h, main/{archives,configure,enquiry,filesdb,
+    help,main,packages,processarc,remove}.c, main/{filesdb,main}.h,
+    utils/{md5sum, start-stop-daemon}.c, dselect/pkg{list.cc,list.hh,
+    top.cc}, include/dpkg{-db.h,.h.in}: Fixed up several warning types.
+    const, casting, incorrect sizes, signed/unsigned comparisons.
+
 Mon Apr 23 02:17:26 CDT 2001 Adam Heath <doogie@debian.org>
 
   * dpkg-deb/info.c, main/processarc.c: Add comments telling why we
