--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Mon Apr 23 05:31:03 CDT 2001 Adam Heath <doogie@debian.org>
+
+  * split/info.c: Change format string, to handle size_t.
+
 Mon Apr 23 04:45:23 CDT 2001 Adam Heath <doogie@debian.org>
 
   * main/main.c: s/--no-debsign/--no-debsig/ in help.
