Changed 0 to NULL.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Mon Apr 23 06:27:47 CDT 2001 Adam Heath <doogie@debian.org>
+
+  * lib/*.c: Changed 0 to NULL.
+
 Mon Apr 23 06:25:36 CDT 2001 Adam Heath <doogie@debian.org>
 
   * dpkg-deb/extract.c: More %z format fixes.
