Fix bad memory access do_script(), introduced when the casting errors were fixed previously.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Mon Apr 23 14:13:48 CDT 2001 Adam Heath <doogie@debian.org>
+
+  * main/help.c: Fix bad memory access do_script(), introduced when the
+    casting errors were fixed previously.
+
 Mon Apr 23 06:27:47 CDT 2001 Adam Heath <doogie@debian.org>
 
   * lib/*.c: Changed 0 to NULL.
