* main/depcon.c, debian/changelog: When walking the list of providers of     a dependency, the arguments were passed in reverse to the cyclebreak     checker, so cycles involving provides were never detected.   * debian/changelog: Document that we fixed a segfault.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Mon Apr 23 15:36:58 CDT 2001 Adam Heath <doogie@debian.org>
+
+  * main/depcon.c, debian/changelog: When walking the list of providers of
+    a dependency, the arguments were passed in reverse to the cyclebreak
+    checker, so cycles involving provides were never detected.
+  * debian/changelog: Document that we fixed a segfault.
+
 Mon Apr 23 14:13:48 CDT 2001 Adam Heath <doogie@debian.org>
 
   * main/help.c: Fix bad memory access do_script(), introduced when the
