Convert waitsubproc and checksubprocerr to use a flags variable, instead of separate ints.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Mon Apr 23 15:39:37 CDT 2001 Adam Heath <doogie@debian.org>
+
+  * dpkg-deb/{build,extract,info}.c, include/dpkg.h.in, lib/mlib.c,
+    main/{archives,enquiry,help,processarc}.c: Convert waitsubproc and
+    checksubprocerr to use a flags variable, instead of separate ints.
+
 Mon Apr 23 15:36:58 CDT 2001 Adam Heath <doogie@debian.org>
 
   * main/depcon.c, debian/changelog: When walking the list of providers of
