* main/enquiry.c: Additional add error returns for -L, -s, and -p.   * debian/changelog: Close a debian bug because of this.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Mon Apr 23 17:17:35 CDT 2001 Adam Heath <doogie@debian.org>
+
+  * main/enquiry.c: Additional add error returns for -L, -s, and -p.
+  * debian/changelog: Close a debian bug because of this.
+
 Mon Apr 23 23:54:34 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
 
   * main/main.h: add declaration for nerrs
