--- a/debian/changelog
+++ b/debian/changelog
@@ -96,6 +96,8 @@ dpkg (1.9.0) unstable; urgency=low
     by default. Closes: Bug#95023
   * Handle dangling symlinks, by ignoring error code 1 from find, when
     processing --recursive. Closes: Bug#4784
+  * dpkg -L, -S, -l, -s, and -p now return an error code if any package
+    does not exist. Closes: Bug#4974
 
  -- Wichert Akkerman <wakkerma@debian.org>  Sat, 13 Jan 2001 08:52:11 -0500
 
