--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Mon Apr 23 18:08:37 CDT 2001 Adam Heath <doogie@debian.org>
+
+  * lib/parsehelp.c: Reduce memory a tad.
+  * debian/changelog: Close additional bugs.
+  * debian/rules: Added a build-static rule.
+
 Mon Apr 23 17:17:35 CDT 2001 Adam Heath <doogie@debian.org>
 
   * main/enquiry.c: Additional add error returns for -L, -s, and -p.
