--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Tue Apr 24 01:40:11 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
+
+  * dselect/pkglist.cc: repair qsort_compareentries
+
 Mon Apr 23 18:08:37 CDT 2001 Adam Heath <doogie@debian.org>
 
   * lib/parsehelp.c: Reduce memory a tad.
