Add dselect configuration file

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Tue Apr 24 02:13:43 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
+
+  * dselect/main.cc: use myfileopt as well to read dselect.cfg
+  * debian/dselect.cfg: new file
+  * debian/rules: install dselect.cfg
+  * debian/dpkg.conffiles: add dselect.cfg
+
 Tue Apr 24 01:40:11 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
 
   * dselect/pkglist.cc: repair qsort_compareentries
