--- a/debian/changelog
+++ b/debian/changelog
@@ -98,8 +98,9 @@ dpkg (1.9.0) unstable; urgency=low
     processing --recursive. Closes: Bug#4784
   * dpkg -L, -S, -l, -s, and -p now return an error code if any package
     does not exist. Closes: Bug#4974, #72406
+  * dselect has a configuration file as well now
 
- -- Wichert Akkerman <wakkerma@debian.org>  Sat, 13 Jan 2001 08:52:11 -0500
+ -- Wichert Akkerman <wakkerma@debian.org>  Tue, 24 Apr 2001 02:23:46 +0200
 
 dpkg (1.8.3.1) unstable; urgency=low
 
