--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Tue Apr 24 02:55:21 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
+
+  * po/de.po: remove Language-Team header, the debian-l10n-german
+    list it pointed to does not exist.
+
 Tue Apr 24 02:41:23 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
 
   * main/enquiry.c: add missing newline after error message
