Updated Swedish translation for 1.9.0.

--- a/doc/sv/dpkg.8
+++ b/doc/sv/dpkg.8
@@ -1,5 +1,5 @@
 .\" Hey Emacs! This file is -*- nroff -*- source.
-.\" Translation of CVS revision 1.22
+.\" Translation of CVS revision 1.23
 .TH DPKG 8 "12 april 1998" "Debianprojektet" "Dpkg-sviten"
 .SH NAMN
 dpkg \- en mellannivåpakethanterare för Debian
@@ -406,7 +406,7 @@ alltid det förvalda alternativet.
 Om inget förval har angivits använder vi den gamla eller nya versionen,
 beroende på vilka flaggor som ges.
 
-\fBoverwrite\fP(*):
+\fBoverwrite\fP:
 Skriv över ett pakets filer med ett annats.
 
 \fBoverwrite-dir\fP
