--- a/po/sv.po
+++ b/po/sv.po
@@ -1037,7 +1037,7 @@ msgstr "fel vid stängning av finds rör"
 
 #: main/archives.c:824
 #, c-format
-msgid "find for --recurisve returned unhandled error %i"
+msgid "find for --recursive returned unhandled error %i"
 msgstr "find för --recursive returnerade ohanterat fel %i"
 
 #: main/archives.c:827
