--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Tue Apr 24 11:57:48 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
+
+  * main/archives.c: spell recursive correctly
+  * po/sv.po: updated so it still translates the fixed message
+  * po/ru.po: updated
+
 Tue Apr 24 07:02:01 CEST 2001 peter karlsson <peterk@debian.org>
 
   * doc/sv/dpkg.8, po/sv.po: Updated Swedish translation.
