Add new enoent utility to get ENOENT at runtime

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Tue Apr 24 13:03:54 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
+
+  * utils/enoent.c: new utility to get ENOENT value at runtime
+  * utils/Makefile.in: install ENOENT in dpkglibdir
+  * scripts/dpkg-divert.pl, update-alternatives.pl: use enoent to get
+    ENOENT value
+
 Tue Apr 24 13:01:28 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
 
   * dselect/Makefile.in, main/Makefile.in, utils/Makefile.in: use
