--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Tue Apr 24 13:35:08 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
+
+  * po/it.po: New version from Lele Gaifax
+
 Tue Apr 24 13:21:39 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
 
   * Merge SuperH patch from YAEGASHI Takeshi
