Really install French manpages

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Tue Apr 24 14:29:03 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
+
+  * debian/rules: actually install French manpages as well
+
 Tue Apr 24 13:38:58 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
 
   * scripts/dpkg-divert.pl: Fix wrong errno test
