--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Tue Apr 24 14:31:41 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
+
+  * debian/rules: install enoent in the dpkg package
+
 Tue Apr 24 14:29:03 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
 
   * debian/rules: actually install French manpages as well
