--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Tue Apr 24 14:44:28 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
+
+  * bunch-o-files: move dpkg-scansources manpage to section 8
+
 Tue Apr 24 14:31:41 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
 
   * debian/rules: install enoent in the dpkg package
