Fix spelling error

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Tue Apr 24 17:23:05 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
+
+  * main/main.c, po/*.po: fix typo
+
 Tue Apr 24 14:44:28 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
 
   * bunch-o-files: move dpkg-scansources manpage to section 8
