--- a/po/de.po
+++ b/po/de.po
@@ -2369,7 +2369,7 @@ msgstr "Konflikt von --%s und --%s"
 
 #: main/main.c:190
 #, c-format
-msgid "Warning: obselete option `--%s'\n"
+msgid "Warning: obsolete option `--%s'\n"
 msgstr ""
 
 #: main/main.c:198
