--- a/po/nl.po
+++ b/po/nl.po
@@ -2370,7 +2370,7 @@ msgstr "tegenstrijdige acties --%s en --%s"
 
 #: main/main.c:190
 #, c-format
-msgid "Warning: obselete option `--%s'\n"
+msgid "Warning: obsolete option `--%s'\n"
 msgstr "Let op: verouderde optie `--%s'\n"
 
 #: main/main.c:198
