--- a/po/pl.po
+++ b/po/pl.po
@@ -2379,7 +2379,7 @@ msgstr "konflikt miêdzy dzia³aniem --%s i --%s"
 
 #: main/main.c:190
 #, c-format
-msgid "Warning: obselete option `--%s'\n"
+msgid "Warning: obsolete option `--%s'\n"
 msgstr ""
 
 #: main/main.c:198
