--- a/po/sv.po
+++ b/po/sv.po
@@ -2338,7 +2338,7 @@ msgstr "motstridiga val --%s och --%s"
 
 #: main/main.c:190
 #, c-format
-msgid "Warning: obselete option `--%s'\n"
+msgid "Warning: obsolete option `--%s'\n"
 msgstr "Varning: föråldrad flagga \"--%s\"\n"
 
 #: main/main.c:198
