--- a/po/cs.po
+++ b/po/cs.po
@@ -2331,7 +2331,7 @@ msgstr "odporující si akce --%s a --%s"
 
 #: main/main.c:190
 #, c-format
-msgid "Warning: obselete option `--%s'\n"
+msgid "Warning: obsolete option `--%s'\n"
 msgstr ""
 
 #: main/main.c:198
