--- a/po/es.po
+++ b/po/es.po
@@ -2478,7 +2478,7 @@ msgstr "acciones en conflicto --%s y --%s"
 
 #: main/main.c:190
 #, c-format
-msgid "Warning: obselete option `--%s'\n"
+msgid "Warning: obsolete option `--%s'\n"
 msgstr ""
 
 #: main/main.c:198
