--- a/po/ja.po
+++ b/po/ja.po
@@ -2377,7 +2377,7 @@ msgstr "アクション --%s と --%s が競合します。"
 
 #: main/main.c:190
 #, c-format
-msgid "Warning: obselete option `--%s'\n"
+msgid "Warning: obsolete option `--%s'\n"
 msgstr ""
 
 #: main/main.c:198
