--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Tue Apr 24 20:28:04 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
+
+  * po/cs.po: Updated
+  * po/pl.po: Updated
+
 Tue Apr 24 17:23:05 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
 
   * main/main.c, po/*.po: fix typo
