--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Tue Apr 24 20:57:48 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
+
+  * po/ja.po: Updated
+
 Tue Apr 24 20:28:04 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
 
   * po/cs.po: Updated
