Add new Danish translation

--- a/debian/changelog
+++ b/debian/changelog
@@ -24,6 +24,7 @@ dpkg (1.9.0) unstable; urgency=low
   * Update French translation, Closes: Bug#65284,#85035,#87238
   * Update Japanese translation, Closes: Bug#93873
   * Updated all other translations (but no bugs filed)
+  * Add Danish translation
   * Remove spurious '%s' in Polish translation, Closes: Bug#74814
   * Add French manpages, courtesy of Philippe Batailler
   * Ingore vim swapfiles in dpkg-source, Closes: Bug#81630
