--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 Wed Apr 25 00:29:51 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
 
   * po/da.po: New Danish translation
+  * configure.in: add da to ALL_LINGUAS
 
 Tue Apr 24 20:57:48 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
 
