Update Russion translation

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Wed Apr 25 00:56:14 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
+
+  * po/ru.pu: Updated
+
 Wed Apr 25 00:29:51 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
 
   * po/da.po: New Danish translation
