fix translations where both strings did not both end with \n

--- a/po/ja.po
+++ b/po/ja.po
@@ -1594,7 +1594,7 @@ msgid ""
 msgstr ""
 "以下のパッケージは最初の設定中に問題が発生したため、設定が終了していません。\n"
 "dpkg --configure <パッケージ> か dselect で設定(configure)メニューオプションを\n"
-"使って設定作業を再試行しなければなりません:"
+"使って設定作業を再試行しなければなりません:\n"
 
 #: main/enquiry.c:202
 msgid ""
@@ -1705,7 +1705,7 @@ msgid ""
 "and dpkg --contents (= dpkg-deb --contents) to list their contents.\n"
 msgstr ""
 "アーカイブファイルを調べるためには dpkg --info (= dpkg-deb --info)を、\n"
-"その内容一覧を表示するには dpkg --contents (= dpkg-deb --contents)を使います。"
+"その内容一覧を表示するには dpkg --contents (= dpkg-deb --contents)を使います。\n"
 
 #: main/enquiry.c:519
 msgid "--assert-* does not take any arguments"
@@ -2311,7 +2311,7 @@ msgstr "アクション --%s と --%s が競合します。"
 #: main/main.c:190
 #, c-format
 msgid "Warning: obsolete option `--%s'\n"
-msgstr "警告: 古いオプション `--%s'"
+msgstr "警告: 古いオプション `--%s'\n"
 
 #: main/main.c:198
 #, c-format
@@ -2598,7 +2598,7 @@ msgstr ""
 
 #: main/processarc.c:157
 msgid "passed\n"
-msgstr "合格"
+msgstr "合格\n"
 
 #. We use tmpnam here, not to get a unique filename, but to get a unique directory.
 #: main/processarc.c:166
@@ -2994,12 +2994,12 @@ msgstr "%s: 圧縮コピーループがありません。"
 #: dpkg-deb/build.c:175
 #, c-format
 msgid "%s: internal gzip error: read: `%s'"
-msgstr "%s: 内部 gzip エラー(読み込み) `%s' です。\n"
+msgstr "%s: 内部 gzip エラー(読み込み) `%s' です。"
 
 #: dpkg-deb/build.c:185
 #, c-format
 msgid "%s: internal gzip error: write: `%s'"
-msgstr "%s: 内部 gzip エラー(書きこみ) `%s' です。\n"
+msgstr "%s: 内部 gzip エラー(書きこみ) `%s' です。"
 
 #: dpkg-deb/build.c:188
 #, c-format
@@ -3384,7 +3384,7 @@ msgstr "コピー中にパイプのクローズに失敗しました。"
 #: dpkg-deb/extract.c:271
 #, c-format
 msgid "internal gzip error: `%s'"
-msgstr "内部 gzip エラー: `%s'\n"
+msgstr "内部 gzip エラー: `%s'"
 
 #: dpkg-deb/extract.c:277
 msgid "failed to exec gzip -dc"
@@ -5133,7 +5133,7 @@ msgstr "<なし>"
 
 #: dselect/pkgsublist.cc:103
 msgid " does not appear to be available\n"
-msgstr "利用可能ではないようです"
+msgstr "利用可能ではないようです\n"
 
 #: dselect/pkgsublist.cc:120
 msgid " or "
