--- a/po/ru.po
+++ b/po/ru.po
@@ -2800,12 +2800,12 @@ msgstr ""
 #: dpkg-deb/build.c:175
 #, c-format
 msgid "%s: internal gzip error: read: `%s'"
-msgstr "%s: внутренняя ошибка gzip: чтение: `%s'\n"
+msgstr "%s: внутренняя ошибка gzip: чтение: `%s'"
 
 #: dpkg-deb/build.c:185
 #, c-format
 msgid "%s: internal gzip error: write: `%s'"
-msgstr "%s: внутренняя ошибка gzip: запись: `%s'\n"
+msgstr "%s: внутренняя ошибка gzip: запись: `%s'"
 
 #: dpkg-deb/build.c:188
 #, c-format
@@ -3176,7 +3176,7 @@ msgstr "не удалось закрыть канал ввода/вывода при копировании"
 #: dpkg-deb/extract.c:271
 #, c-format
 msgid "internal gzip error: `%s'"
-msgstr "внутренняя ошибка gzip: `%s'\n"
+msgstr "внутренняя ошибка gzip: `%s'"
 
 #: dpkg-deb/extract.c:277
 msgid "failed to exec gzip -dc"
