--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Wed Apr 25 02:20:40 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
+
+  * po/gl.po: Updated
+
 Wed Apr 25 01:09:50 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
 
   * po/{ja,ru}.po: fix inconsistencies in line endings wrt \n
