Document dpkg.cfg

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Wed Apr 25 13:15:41 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
+
+  * main/dpkg.8: document dpkg.cfg
+
 Wed Apr 25 13:05:13 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
 
   * main/dpkg.8: Fix formating error
