--- a/debian/changelog
+++ b/debian/changelog
@@ -105,7 +105,8 @@ dpkg (1.9.0) unstable; urgency=low
     Closes: Bug# 31620
   * Fix wrong ENOENT test in dpkg-divert. Closes: Bug#95088
   * Add support for more SuperH variants (sh[34]{,eb}-linux-gnu)
-  * Fix formating in dpkg manpage
+  * Fix formating and a typo in the dpkg manpage
+  * Document the dpkg.cfg configuration file in dpkg(8)
 
  -- Wichert Akkerman <wakkerma@debian.org>  Tue, 24 Apr 2001 02:23:46 +0200
 
