Update Spanish translation

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Wed Apr 25 17:27:36 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
+
+  * po/es.po: Updated
+
 Wed Apr 25 13:15:41 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
 
   * main/dpkg.8: document dpkg.cfg
