--- a/dselect/dselect.8
+++ b/dselect/dselect.8
@@ -48,6 +48,11 @@ Removes or purges deselected packages.
 .B Quit
 Exit dselect (successfully).
 .SH OPTIONS
+All options can be specified both on the commandline and in the \fBdselect\fP
+configuration file \fI/etc/dpkg/dselect.cfg\fP. Each line in the configuration
+file is either an option (exactly the same as the commandline option but
+without leading dashes) or a comment (if it starts with a \fB#\fR).
+.br
 .TP
 .B --admindir <directory>
 Changes the directory where the dpkg `status', `available' and similar
