Update Danish translation

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Thu Apr 26 00:32:35 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
+
+  * po/da.po: Updated
+
 Wed Apr 25 18:46:47 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
 
   * dselect/dselect.8: document dselect.cfg
