--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Thu Apr 26 11:51:34 CDT 2001 Adam Heath <doogie@debian.org>
+
+  * split/{info,join,main,queue,split}.c: s/0/NULL/
+
 Thu Apr 26 13:36:41 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
 
   * utils/md5sum.c: use libdpkg error handling since fd_md5 uses that
