Update to work with recent lib/mlib.c change in md5 handling.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Thu Apr 26 13:15:02 CDT 2001 Adam Heath <doogie@debian.org>
+
+  * main/configure.c: Update to work with recent lib/mlib.c change in
+    md5 handling.
+
 Thu Apr 26 11:51:34 CDT 2001 Adam Heath <doogie@debian.org>
 
   * split/{info,join,main,queue,split}.c: s/0/NULL/
