--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Fri Apr 27 07:39:00 CEST 2001 peter karlsson <peterk@debian.org>
+
+  * doc/sv/dpkg.8: Updated to mtach main/dpkg.8 1.25.
+
 Thu Apr 26 13:15:02 CDT 2001 Adam Heath <doogie@debian.org>
 
   * main/configure.c: Update to work with recent lib/mlib.c change in
