Fix a segfault when reading an empty file in parsedb().

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Fri Apr 27 13:14:04 CDT 2001 Adam Heath <doogie@debian.org>
+
+  * lib/parse.c, debian/changelog: Fix a segfault when reading an empty
+    file in parsedb().
+
 Fri Apr 27 07:39:00 CEST 2001 peter karlsson <peterk@debian.org>
 
   * doc/sv/dpkg.8: Updated to mtach main/dpkg.8 1.25.
