--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+dpkg (1.9.1) unstable; urgency=low
+
+  * Fix segfault with empty status and available, and when missing a
+    trailing new line.  Closes: #95496
+
+ -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
+
 dpkg (1.9.0) unstable; urgency=low
 
   * Things should mostly work OpenBSD 2.8 as well now
