dpkg-shlibdeps need not care about the dpkg --search exitcode

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,11 +1,13 @@
+Sat Apr 28 02:52:56 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
+
+  * scripts/dpkg-shlibdeps.pl: do not care if dpkg --search returns
+    with an error: it will do that know if we search for something
+    that is not installed which is a valid case for us.
+
 Fri Apr 27 13:14:04 CDT 2001 Adam Heath <doogie@debian.org>
 
   * lib/parse.c, debian/changelog: Fix a segfault when reading an empty
-    file in parsedb().
-
-Fri Apr 27 07:39:00 CEST 2001 peter karlsson <peterk@debian.org>
-
-  * doc/sv/dpkg.8: Updated to mtach main/dpkg.8 1.25.
+    file in parsedb(), imported from head.
 
 Thu Apr 26 13:15:02 CDT 2001 Adam Heath <doogie@debian.org>
 
