nfstrnsave() was not allocated n+1 chars, and was not setting the n+1 byte to \0.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Fri Apr 27 20:43:25 CDT 2001 Adam Heath <doogie@debian.org>
+
+  * lib/nfmalloc.c: nfstrnsave() was not allocated n+1 chars, and was not
+    setting the n+1 byte to \0.
+
 Sat Apr 28 02:52:56 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
 
   * scripts/dpkg-shlibdeps.pl: do not care if dpkg --search returns
