--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,8 @@ dpkg (1.9.1) unstable; urgency=low
     trailing new line.  Closes: #95496
   * Make dpkg-shlibdeps not care if dpkg --search return with an error.
     Closes: Bug#95568
+  * Fix corruption of user-defined fields in status and available.
+    Closes: Bug#95567.
 
  -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
 
