s,etc/dpkg.cfg,etc/dpkg/dpkg.cfg,

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sat Apr 28 01:48:59 CDT 2001 Adam Heath <doogie@debian.org>
+
+  * main/dpkg.8, doc/sv/dpkg.8: s,etc/dpkg.cfg,etc/dpkg/dpkg.cfg,
+
 Fri Apr 27 20:43:25 CDT 2001 Adam Heath <doogie@debian.org>
 
   * lib/nfmalloc.c: nfstrnsave() was not allocated n+1 chars, and was not
