Changed to include no-debsig by default, as no debs are currently signed, and we get false errors when debsig-verify is installed.  This will be removed in the future, when the archive tools support package signatures.

--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,10 @@ dpkg (1.9.1) unstable; urgency=low
     Closes: Bug#95568
   * Fix corruption of user-defined fields in status and available.
     Closes: Bug#95567.
+  * Changed dpkg.cfg to include no-debsig by default, as no debs are
+    currently signed, and we get false errors when debsig-verify is
+    installed.  This will be removed in the future, when the archive tools
+    support package signatures.  Closes: Bug#95573
 
  -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
 
