--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Sat Apr 28 03:33:28 CDT 2001 Adam Heath <doogie@debian.org>
+
+  * debian/dpkg.cfg: Changed to include no-debsig by default, as no debs
+    are currently signed, and we get false errors when debsig-verify is
+    installed.  This will be removed in the future, when the archive tools
+    support package signatures.
+
 Sat Apr 28 01:48:59 CDT 2001 Adam Heath <doogie@debian.org>
 
   * main/dpkg.8, doc/sv/dpkg.8: s,etc/dpkg.cfg,etc/dpkg/dpkg.cfg,
