--- a/ChangeLog
+++ b/ChangeLog
@@ -1,13 +1,14 @@
+Sat Apr 28 12:18:55 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
+
+  * scripts/dpkg-buildpackage.sh: only check for valid sign interface
+    when the user specifies one
+   
 Sat Apr 28 03:33:28 CDT 2001 Adam Heath <doogie@debian.org>
 
   * debian/dpkg.cfg: Changed to include no-debsig by default, as no debs
     are currently signed, and we get false errors when debsig-verify is
     installed.  This will be removed in the future, when the archive tools
     support package signatures.
-
-Sat Apr 28 01:48:59 CDT 2001 Adam Heath <doogie@debian.org>
-
-  * main/dpkg.8, doc/sv/dpkg.8: s,etc/dpkg.cfg,etc/dpkg/dpkg.cfg,
 
 Fri Apr 27 20:43:25 CDT 2001 Adam Heath <doogie@debian.org>
 
