Fix removing of diversions.  This has always been broken, but was just masked by another bug, that made it work. :|

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Sat Apr 28 14:31:27 CDT 2001 Adam Heath <doogie@debian.org>
+
+  * scripts/dpkg-divert.pl, debian/changelog: Fix removing of diversions.
+    This has always been broken, but was just masked by another bug, that
+    made it work. :|
+
 Sat Apr 28 12:18:55 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
 
   * scripts/dpkg-buildpackage.sh: only check for valid sign interface
