--- a/debian/changelog
+++ b/debian/changelog
@@ -12,6 +12,7 @@ dpkg (1.9.1) unstable; urgency=low
     support package signatures.  Closes: Bug#95573
   * dpkg-buildpackage should only check for valid signinterface if the
     user specifies one. Closes: Bug#95598
+  * Fix removing of diversions.  Closes: Bug#95655
 
  -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
 
