* lib/nfmalloc.c: in nfstrnsave, don't set the char after the end, but     set the end, to \0.   * lib/parse.c: Don't loose the last char of a field value, when EOF is     hit.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Sat Apr 28 15:22:25 CDT 2001 Adam Heath <doogie@debian.org>
+
+  * lib/nfmalloc.c: in nfstrnsave, don't set the char after the end, but
+    set the end, to \0.
+  * lib/parse.c: Don't loose the last char of a field value, when EOF is
+    hit.
+
 Sat Apr 28 14:31:27 CDT 2001 Adam Heath <doogie@debian.org>
 
   * scripts/dpkg-divert.pl, debian/changelog: Fix removing of diversions.
