Add 1.9.1 release date

--- a/debian/changelog
+++ b/debian/changelog
@@ -15,7 +15,7 @@ dpkg (1.9.1) unstable; urgency=low
   * Fix removing of diversions.  Closes: Bug#95655
   * Fix md5sum -c. Closes: Bug#95586
 
- -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
+ -- Adam Heath <doogie@debian.org>  Sat, 28 Apr 2001 16:28:21 -0500
 
 dpkg (1.9.0) unstable; urgency=low
 
