Fix Eterm/eterm problem.  findpackage() now does tolower() before searching for a name, and f_name() uses the name field from the return value of findpackage().

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Sun Apr 29 22:39:55 CDT 2001 Adam Heath <doogie@debian.org>
+
+  * lib/database.c, lib/fields.c: Fix Eterm/eterm problem.  findpackage()
+    now does tolower() before searching for a name, and f_name() uses the
+    name field from the return value of findpackage().
+
 Sun Apr 29 22:08:37 CDT 2001 Adam Heath <doogie@debian.org>
 
   * Makefile.conf.in, configure.in, debian/control, debian/rules,
