--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+dpkg (1.10) unstable; urgency=low
+
+  * Fixed upper/lowercase problems with package names. Closes: Bug#58091
+    (and 3 others).
+
+ -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
+ 
 dpkg (1.9.1) unstable; urgency=low
 
   * Fix segfault with empty status and available, and when missing a
