EAGAIN patch from 1.8 branch was not applied to HEAD.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Mon Apr 30 10:04:36 CDT 2001 Adam Heath <doogie@debian.org>
+
+  * lib/mlib.c: EAGAIN patch from 1.8 branch was not applied to HEAD.
+
 Sun Apr 29 22:39:55 CDT 2001 Adam Heath <doogie@debian.org>
 
   * lib/database.c, lib/fields.c: Fix Eterm/eterm problem.  findpackage()
